site/backend/chat_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: den990/chat_service:1.0.5
          ports:
            - containerPort: 8080
            - containerPort: 50501  # Добавляем gRPC-порт
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30082
    - name: grpc
      protocol: TCP
      port: 50501
      targetPort: 50501
  type: NodePort
