site/backend/notification_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: den990/notification_service:1.0.13
          ports:
            - containerPort: 8080
            - containerPort: 50501  # Добавляем gRPC-порт
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30083
    - name: grpc
      protocol: TCP
      port: 50501
      targetPort: 50501
  type: NodePort
