site/backend/user_service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: den990/user_service:1.0.56
          ports:
            - name: http
              containerPort: 8080  # HTTP API
            - name: grpc
              containerPort: 50501 # gRPC API
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
    - name: grpc
      protocol: TCP
      port: 50501
      targetPort: 50501
  type: NodePort
