site/backend/allow-smtp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smtp
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 142.250.102.0/24
      ports:
        - protocol: TCP
          port: 587
